# ftl_ssd_os

./: .gitignore  COMMIT_EDITMSG  Cargo.toml  Makefile  README.md  build.rs  compile.sh  conn_checker.sh  flake.nix  ftl_ssd_os.conn  ftl_ssd_os.pipe  makefile  memory.x  not_working_no_prints.txt  pipe_checker.sh  pipe_name_checker.sh  readme.md  target.json  working_with_prints.txt
.cargo/: config.toml
.direnv/: flake-profile-1-link
.zed/: settings.json
benchmark/: bench.txt  plots.py
benchmark/CPC_plots/: bench.txt  rtt_stats.txt
benchmark/plots/: rtt_stats.txt
benchmark/plots_design1_latency/: bench copy.txt  rtt_stats.txt
benchmark/plots_design2/: rtt_stats.txt
benchmark/plots_design3_latency/: rtt_stats.txt
benchmark/round_trip/: c_stages_sec.txt  plot.py
benchmark/round_trip/configs/: clang.txt  gcc.txt  rust.txt
benchmark/round_trip/times/: gcc.txt  rust.txt
benchmark/round_trip_sustained_tput/: rust_stages_sec.txt
benchmark/sustained_throughput/: plot.py
headers/: ox-block.h  ssd_os.h  volt.h  wrapper.h
plots/: compiler_stats.txt  operation_stats.txt
src/: bbt.rs  bindings.rs  cpath.rs  fake_alloc.rs  generated_bindings.rs  lib.rs  main.rs  my_alloc.rs  safe_bindings.rs  sdd_os_alloc.rs  test.rs
src/allocator/: linked_list_alloc.rs  mod.rs  sdd_os_alloc.rs  semaphore_alloc.rs
src/apps/: mod.rs
src/bbt/: bbt.rs  bbt_conn.rs  mod.rs
src/bindings/: connectors.rs  generated.rs  lring.rs  mem.rs  mod.rs  safe.rs  stages.rs  symbols.rs
src/garbage_collector/: gc.rs
src/generated_bindings/: ssd_os.rs  volt.rs
src/l2p/: l2p.rs  l2p_btreemap.rs  mod.rs
src/media_manager/: media_manager.rs
src/provisioner/: mod.rs  provisioner.rs
src/requester/: requester.rs
src/shared/: addresses.rs  core_local_cell.rs  macros.rs  mod.rs  semaphore.rs
src/ssd_os/: connectors.rs  lring.rs  mod.rs  stages.rs
src/tests/: allocator.rs  bbt.rs  l2p.rs  mod.rs  provisioner.rs
tests/: main.rs
tests/unit/: allocator.rs  bbt.rs  mod.rs  provisioner.rs
(+80 files in other folders)
