[workspace]
[package]
name = "ftl_ssd_os"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
crate-type = ["staticlib"]
test = false
harness = false

[profile.small]
inherits = "release"
opt-level = "s"
lto = true        # Enable Link-Time Optimization
strip = true # Strip debug symbols
panic = "abort"   # Reduce binary size by removing panic unwinding
codegen-units = 1
# debug = "full"

[build-dependencies]
bindgen = "0.71.1"

[dev-dependencies]
rv_unit = { git = "https://github.com/rust-for-ssd/rv_unit.git", version = "0.1.0" }
riscv = "0.13.0"
riscv-rt = "0.14.0"
semihosting = { version = "0.1.19", features = ["stdio"] }

[features]
default = []
test = [] 
pipeline_per_cmd = []
connector_per_component = []
debug = []
benchmark = []
round_trip = []
